methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:4: error: 'case' expected but integer literal found.
      1 => setBrushColor(Color.YELLOW)
      ^